fixed profile pic wrapping, added click-through to friend list

--- a/slices.css
+++ b/slices.css
@@ -47,10 +47,6 @@
 	margin-bottom: 0px;
 }
 
-.profile-friendlist .row {
-	overflow: wrap;
-}
-
 .profile-row {
 	width: 100%;
 	margin-left: 0px !important;
@@ -62,8 +58,9 @@
 }
 
 .friend-icon {
-	width: 50px;
-	height: 50px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	width: 33% !important;
 	border-radius: 50%;
 }
 
@@ -73,9 +70,9 @@
 }
 
 .prof-pic {
-	width: 50px;
-	height: 50px;
+	margin-top: 5px;
 	border-radius: 50%;
+	margin-bottom: 10px;
 }
 
 .pizzas {
@@ -92,6 +89,10 @@
 
 .card .card-content {
 	padding-bottom: 0px;
+}
+
+.profile-row .card h4 {
+	margin-bottom: 0;
 }
 
 .card .card-action .details,
